--- a/pipelines/diabetes-train-and-deploy.yml
+++ b/pipelines/diabetes-train-and-deploy.yml
@@ -1,12 +1,12 @@
 variables:
-  ml-ws-connection: 'amlcicd' # Workspace Service Connection name
-  ml-ws: 'mlops' # AML Workspace name
-  ml-rg: 'unilever' # AML resource Group name
-  ml-ct: 'aml-cluster' # AML Compute cluster name
+  ml-ws-connection: 'azmldemows' # Workspace Service Connection name
+  ml-ws: 'aml-demo' # AML Workspace name
+  ml-rg: 'aml-demo' # AML resource Group name
+  ml-ct: 'cpu-cluster-1' # AML Compute cluster name
   ml-path: 'models/diabetes' # Model directory path in repo
-  ml-exp: 'devops-exp-test' # Experiment name
-  ml-model-name: 'devops-diabetes-model' # Model name
-  ml-aks-name: 'aks-cluster' # AKS cluster name
+  ml-exp: 'exp-test' # Experiment name
+  ml-model-name: 'diabetes-model' # Model name
+  ml-aks-name: 'aks-prod' # AKS cluster name
 
 trigger:
 - master
