--- a/pipelines/diabetes-train-and-deploy.yml
+++ b/pipelines/diabetes-train-and-deploy.yml
@@ -1,7 +1,7 @@
 variables:
   ml-ws-connection: 'azmldemows' # Workspace Service Connection name
-  ml-ws: 'aml-demo' # AML Workspace name
-  ml-rg: 'aml-demo' # AML resource Group name
+  ml-ws: 'mlopsfid' # AML Workspace name
+  ml-rg: 'mlopsf20-rg' # AML resource Group name
   ml-ct: 'cpu-cluster-1' # AML Compute cluster name
   ml-path: 'models/diabetes' # Model directory path in repo
   ml-exp: 'exp-test' # Experiment name
